--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
     <script src="interval.js"></script>
     <script src="driver.js"></script>
     <script src="player.js"></script>
+    <script src="predictor.js"></script>
     <script src="stats.js"></script>
     <script src="statsgraph.js"></script>
     <script src="actions.js"></script>
